# plc-touch

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh
src/: app.rs  atproto.rs  didkey.rs  directory.rs  enclave.rs  event.rs  main.rs  plc.rs  sign.rs
src/ui/: audit.rs  components.rs  identity.rs  keys.rs  login.rs  mod.rs  operations.rs  post.rs
