[package]
name = "plc-touch"
version = "0.1.0"
edition = "2021"
description = "AT Protocol PLC identity manager with macOS Secure Enclave"

[dependencies]
# TUI
ratatui = "0.29"
tui-textarea = "0.7"

# Apple Security framework
security-framework = "3.7"
security-framework-sys = "2.17"
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Cryptography
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"

# Encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ipld_dagcbor = "0.6"
base64 = "0.22"
bs58 = "0.5"
unsigned-varint = "0.8"

# Async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Clipboard
arboard = "3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
block = "0.1"
thiserror = "2"
